--- a/crown-clothing/package.json
+++ b/crown-clothing/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/redux-logger": "^3.0.9",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,8 @@
     "reselect": "^4.1.8",
     "sass": "^1.64.1",
     "styled-components": "^6.0.5",
-    "typescript": "^5.2.2",
+    "typed-redux-saga": "^1.5.0",
+    "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
