--- a/crown-clothing/package.json
+++ b/crown-clothing/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +27,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
     "sass": "^1.64.1",
+    "stripe": "^13.3.0",
     "styled-components": "^6.0.5",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.6.2",
