--- a/crown-clothing/package.json
+++ b/crown-clothing/package.json
@@ -6,7 +6,6 @@
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.7",
@@ -70,5 +69,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "jest-styled-components": "^7.1.1"
   }
 }
