--- a/gatsby-blog/package.json
+++ b/gatsby-blog/package.json
@@ -27,7 +27,7 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "CI= gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "start": "gatsby develop",
